✨ feat(alert): 重构告警组模块并引入DTO模式
重构告警组服务接口及其实现，引入AlertGroupDTO数据传输对象模式，解耦业务逻辑与数据持久层。同时：
- 新增AlertGroupConverter转换器处理实体与DTO/VO间的转换
- 优化Controller层返回值处理，统一使用VO对象响应
- 实现IService接口提供基础CRUD能力
- 添加告警组删除前的指标绑定校验逻辑

主要变更包括：
- 服务接口改为返回DTO而非实体
- 新增AlertGroupDTO记录类型定义
- 实现实体与DTO互转方法
- 规范化各层方法命名

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>